[package]
name = "jsondocckng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
camino = "1.0.7"
fs-err = "2.6.0"
guard = "0.5.1"
paste = "1.0.6"
rustdoc-types = "0.6.0"
serde_json = "1.0.79"
